fixed Java compiler warnings in client library